fix spell menu title alignment

--- a/crawl-ref/source/webserver/game_data/static/style.css
+++ b/crawl-ref/source/webserver/game_data/static/style.css
@@ -316,6 +316,11 @@ body {
     white-space: pre;
 }
 
+/* A hack to align the columns in the spell menu */
+.menu_spell #menu_title {
+    padding-left: 35px;
+}
+
 #menu_more {
     white-space: pre;
 }
